# writing-os-rust

./: Cargo.toml  LICENSE  README.md  x86_64-blog_os.json
.cargo/: config.toml
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
textbook/: 1 - Introduction.md  2 - minimum_kernel.md  3 - vga_text_mode.md  4 - vga_buffer_test.md  Introduction.md
