[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

# language item を使わない
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"

# Build command
[target. 'cfg(target_os = "linux")']
rustflags = ["-C", "link-args=nostartfiles"]

[target. 'cfg(target_os = "windows")']
rustflags = ["-C", "link-args=/ENTRY:_start /SUBSYSTEM:console"]

[target. 'cfg(target_os = "macos")']
rustflags = ["-C", "link-args=-e __start -static -nostartfiles"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
