[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"
authors = ["komuro-hiraku <komuro.hiraku@gmail.com>"]

# language item を使わない
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.23"

